# public-company-research-assistant

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.demo  README.md  docker-compose.yml  pyproject.toml  requirements.txt
agent/: __init__.py  answer_compose.py  company_catalog.py  company_resolver.py  hybrid_tool.py  llm_answer.py  openai_client.py  plan_validator.py  planner.py  rag_tool.py  research_agent.py  research_plan.py  research_planner.py  router.py  scope.py  sql_tool.py  state.py  tier_decider.py  validators.py
app/: __init__.py  api.py  company_universe.py  config.py  prompts.py  ui_streamlit.py
db/: schema.sql  seed.sql  views.sql
docs/: answer_formatting_bug_prd.md  architecture.md  build_plan.md  demo_queries.md  eval_results.md  evaluation.md  live_research_agent_prd.md  mcp_server_prd.md  research_planning_requirements.md
evals/: benchmark_questions.yaml  run_eval.py
ingestion/: __init__.py  bootstrap_from_raw.py  chunk_documents.py  embed_chunks.py  fetch_company_facts.py  fetch_sec_companies.py  fetch_sec_filings.py  freshness.py  live_ingest.py  load_filing_texts.py  load_sec_data.py  parse_documents.py  raw_storage.py  sec_api.py  sec_exhibits.py  source_registry.py
mcp_server/: __init__.py  config.py  logging.py  server.py  tools.py
retrieval/: __init__.py  hybrid_search.py  lexical_search.py  rerank.py  vector_search.py
scripts/: capture_demo_screenshots.mjs
tests/: test_answer_prompt.py  test_entrypoint_integration.py  test_live_multi_company.py  test_mcp_tools.py  test_router.py  (+6 more)
(+2 files in other folders)
