[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "public-company-research-assistant"
version = "0.1.0"
description = "Hybrid SQL and RAG assistant for public-company research."
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "streamlit==1.49.0",
    "openai==1.107.0",
    "psycopg[binary]==3.2.13",
    "pgvector==0.4.1",
    "sqlalchemy==2.0.43",
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
    "python-dotenv==1.1.1",
    "httpx==0.28.1",
    "PyYAML==6.0.2",
    "tenacity==9.1.2",
]

[project.optional-dependencies]
dev = [
    "black>=24.10",
    "pytest>=8.3",
    "ruff>=0.8",
]

[tool.setuptools.packages.find]
include = ["agent*", "app*", "evals*", "ingestion*", "retrieval*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [".venv", "data", "docker"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]
ignore = [
    "B008",
    "E402",
    "E501",
]

[tool.ruff.lint.isort]
known-first-party = ["agent", "app", "evals", "ingestion", "retrieval"]
